# chat_v3

./: CMakeLists.txt  Makefile  README.md  SHA256.h  broadcast_message.h  chat_client.h  chat_server.h  config_file.h  logger.cpp  logger.h  mysql.cpp  private_message.h  project_lib.cpp  project_lib.h  schema.sql  server.cpp
src/: broadcast_message.cpp  chat_client.cpp  chat_message.h  chat_server.cpp  chat_user.cpp  chat_user.h  client.cpp  config_file.cpp  mysql.h  private_message.cpp
